--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Assets/Plugins/Sirenix
 Assets/Plugins
 Assets/Resources/DOTweenSettings.asset
 Assets/Resources/DOTweenSettings.asset.meta
+.idea/.idea.DraasGames.Core NEW/.idea
