--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.unity.addressables": "2.2.2",
     "com.unity.ide.rider": "3.0.34",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.test-framework": "1.4.6",
