--- a/Assets/Packages/DraasGames.Core/Samples~/ViewRouterSample/DraasGamesSample1.asmdef
+++ b/Assets/Packages/DraasGames.Core/Samples~/ViewRouterSample/DraasGamesSample1.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:f6707c553959926459cddc238f5c65fd",
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:edd2aa5c61b22f4458d70f48971575fc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
